@@ -12,6 +12,8 @@ dpkg (1.17.20) UNRELEASED; urgency=low
   * Allow detached upstream signatures for upstream orig.tar files in the
     .dsc file. Suggested by Daniel Kahn Gillmor <dkg@fifthhorseman.net>.
     Closes: #759478
+  * Inline alternative status description into translatable string in
+    update-alternatives. Required-by: #766311
 
   [ Updated programs translations ]
   * German (Sven Joachim).
